# ai_library

./: .gitignore  Cargo.toml  README.fr.md  README.md  git_github_manager.md  install_hooks.sh
.github/workflows/: ci.yml  devops.yml  pr_notification.yml
scripts/bash/git/branch/: check_branch.sh  create_branch.sh  delete_branch.sh
scripts/bash/pipelines/: after_pr_pipeline.sh  create_and_commit.sh  full_push.sh  pr_simulation.sh  safe_delete_and_recreate_branch.sh  sync_main_with_remote.sh
scripts/bash/utils/: select_lang.sh
scripts/git_hooks/: README.md  commit-msg.sh  post-push.sh  pre-commit.sh  pre-push.sh
src/: lib.rs
src/cuda/: bindings.rs  mod.rs  utils.rs
src/data/: README.md  batching.rs  dataset.rs  interop.rs  metadata.rs  mod.rs  normalization.rs  processor.rs  streaming.rs  validation.rs
src/data/loader/: README.md  mod.rs
src/data/preprocessing/: README.md  audio.rs  graph.rs  image.rs  mod.rs  tabular.rs  test_text.rs  text.rs  timeseries.rs  video.rs
src/memory/: cache.rs  mod.rs  ram.rs
src/memory/graph/: edge.rs  memory_graph.rs  mod.rs  node.rs
src/nn/: mod.rs
src/nn/autoencoder/: decoder.rs  encoder.rs  mod.rs  training.rs
src/nn/gan/: discriminator.rs  generator.rs  mod.rs  training.rs
src/nn/snn/: layer.rs  mod.rs  neuron.rs  training.rs
src/symbolic/: mod.rs  rule_engine.rs
src/systems/: mod.rs
src/systems/hybrid/: hybrid.rs  mod.rs
src/systems/moe/: expert.rs  mod.rs  moe.rs  router.rs
src/systems/monolith/: mod.rs  monolith.rs
src/traits/: mod.rs  system.rs  vectorial.rs  worker.rs
(+33 files in other folders)
